--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -634,14 +634,14 @@
 	title        = {Saur and decline: {Patterns} in lizard imports to the {US} (2000-2022)},
 	author       = {Jones, Max Dolton},
 	year         = 2025,
-	month        = 10,
+	month        = oct,
 	journal      = {PLOS ONE},
 	publisher    = {Public Library of Science},
 	volume       = 20,
 	number       = 10,
 	pages        = {1--25},
 	doi          = {10.1371/journal.pone.0333746},
-	url          = {https://doi.org/10.1371/journal.pone.0333746},
+	url          = {https://doi.org/10.1371/journal.pone.0333746}
 }
 @article{doi:10.1073/pnas.2517585122,
 	title        = {
@@ -866,4 +866,27 @@
 	pages        = {1--16},
 	doi          = {10.1371/journal.pone.0332485},
 	url          = {https://doi.org/10.1371/journal.pone.0332485}
+}
+@article{https://doi.org/10.1002/ece3.72978,
+	title        = {
+		Growth Performance Is Driven by Site Conditions and Moderated by Functional
+		Trait Plasticity in {\textit{Quercus robur}} and {\textit{Prunus avium}}
+	},
+	author       = {
+		Di Fabio, Alessandro and Aspalter, Samuel and Chakraborty, Debojyoti and van
+		Loo, Marcela and Rolke, Lisa M. and Sch\"{u}ler, Silvio and Thiel, Robin and
+		Veit, Christiane and Kreyling, J\"{u}rgen
+	},
+	year         = 2026,
+	journal      = {Ecology and Evolution},
+	volume       = 16,
+	number       = 2,
+	pages        = {e72978},
+	doi          = {10.1002/ece3.72978},
+	url          = {https://onlinelibrary.wiley.com/doi/abs/10.1002/ece3.72978},
+	note         = {e72978 ECE-2025-05-01331.R2},
+	keywords     = {
+		functional traits, growth performance, phenotypic plasticity, provenance
+		trial, specific leaf area, spring phenology
+	}
 }
