--- a/README.Rmd
+++ b/README.Rmd
@@ -4,7 +4,8 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-```{r, include = FALSE}
+```{r}
+#| include: false
 knitr::opts_knit$set(
   progress = TRUE,
   base.url = "https://raw.githubusercontent.com/dieghernan/tidyterra/main/"
@@ -22,7 +23,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# tidyterra <a href="https://dieghernan.github.io/tidyterra/"><img src="man/figures/logo.png" align="right" height="139"/></a>
+# tidyterra <a href="https://dieghernan.github.io/tidyterra/"><img src="man/figures/logo.png" alt="tidyterra website" align="right" height="139"/></a>
 
 <!-- badges: start -->
 
@@ -160,21 +161,23 @@ does, see the help page). You can adjust this with the `maxcell` argument.
 ## Installation
 
 ::: pkgdown-release
-
 Install **tidyterra** from
 [**CRAN**](https://CRAN.R-project.org/package=tidyterra):
 
-```{r, eval=FALSE}
+```{r}
+#| eval: false
 install.packages("tidyterra")
 ```
-
 :::
 
 ::: pkgdown-devel
+Check the docs of the developing version in
+<https://dieghernan.github.io/tidyterra/dev/>
 
-You can install the development version of **tidyterra** like so:
+You can install the developing version of **tidyterra** like so:
 
-```{r, eval=FALSE }
+```{r}
+#| eval: false
 # install.packages("pak")
 pak::pak("dieghernan/tidyterra")
 ```
@@ -182,14 +185,17 @@ pak::pak("dieghernan/tidyterra")
 Alternatively, you can install **tidyterra** using the
 [r-universe](https://dieghernan.r-universe.dev/tidyterra):
 
-```{r, eval=FALSE}
+```{r}
+#| eval: false
 # Enable this universe
-install.packages("tidyterra", repos = c(
-  "https://dieghernan.r-universe.dev",
-  "https://cloud.r-project.org"
-))
+install.packages(
+  "tidyterra",
+  repos = c(
+    "https://dieghernan.r-universe.dev",
+    "https://cloud.r-project.org"
+  )
+)
 ```
-
 :::
 
 ## Example
@@ -199,7 +205,9 @@ install.packages("tidyterra", repos = c(
 This is a basic example which shows you how to manipulate and plot `SpatRaster`
 objects:
 
-```{r example-temp, fig.alt="Average temperature in Castille and Leon, Spain"}
+```{r}
+#| label: example-temp
+#| fig-alt: Average temperature in Castille and Leon, Spain
 library(tidyterra)
 library(terra)
 
@@ -242,7 +250,8 @@ ggplot(prov) +
   geom_spatraster(data = variation) +
   geom_spatvector(fill = NA) +
   scale_fill_whitebox_c(
-    palette = "deep", direction = -1,
+    palette = "deep",
+    direction = -1,
     labels = scales::label_number(suffix = "º"),
     n.breaks = 5
   ) +
@@ -258,7 +267,9 @@ ggplot(prov) +
 **tidyterra** also provides a geom for plotting RGB `SpatRaster` tiles with
 **ggplot2**:
 
-```{r example-tile, fig.alt="Example: Plotting a tile in tidyterra"}
+```{r}
+#| label: example-tile
+#| fig-alt: 'Example: Plotting a tile in tidyterra'
 rgb_tile <- rast(system.file("extdata/cyl_tile.tif", package = "tidyterra"))
 
 plot <- ggplot(prov) +
@@ -277,7 +288,10 @@ plot +
 **tidyterra** provides specific scales for plotting hypsometric maps with
 **ggplot2**:
 
-```{r hypso, fig.asp=0.65, fig.alt="Hypsometric map of Asia"}
+```{r}
+#| label: hypso
+#| fig-asp: 0.65
+#| fig-alt: Hypsometric map of Asia
 asia <- rast(system.file("extdata/asia.tif", package = "tidyterra"))
 
 terra::plot(asia)
@@ -309,7 +323,8 @@ ggplot() +
 This is a basic example which shows you how to manipulate and plot `SpatVector`
 objects:
 
-```{r spatvec }
+```{r }
+#| label: spatvec
 vect(system.file("ex/lux.shp", package = "terra")) |>
   mutate(pop_dens = POP / AREA) |>
   glimpse() |>
@@ -333,7 +348,7 @@ Check our [FAQs](https://dieghernan.github.io/tidyterra/articles/faqs.html) or
 open a new [issue](https://github.com/dieghernan/tidyterra/issues)!
 
 You can also ask in [Stack Overflow](https://stackoverflow.com/) using the tag
-[\[tidyterra\]](https://stackoverflow.com/questions/tagged/tidyterra).
+[[tidyterra]](https://stackoverflow.com/questions/tagged/tidyterra).
 
 ## Acknowledgement
 
