--- a/vignettes/articles/faqs.qmd
+++ b/vignettes/articles/faqs.qmd
@@ -1,34 +1,30 @@
 ---
 title: "tidyterra FAQs"
-description: Frequently Asked Questions on the use of **tidyterra**.
+description: Frequently Asked Questions on the use of tidyterra.
+knitr:
+  opts_chunk:
+    collapse: true
+    comment: "#>"
+    warning: false
+    message: false
+    dpi: 300
+    tidy: "styler"
+    dev: "ragg_png"
+    out.width: "100%"
 ---
 
-```{r setup, include = FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>",
-  warning = FALSE,
-  message = FALSE,
-  dpi = 300,
-  cache = FALSE,
-  dev = "ragg_png",
-  tidy = "styler",
-  out.width = "100%"
-)
-```
-
-This is a compendium of [questions that have
-arisen](https://github.com/dieghernan/tidyterra/discussions) on the use of the
-**tidyterra** package and the potential solutions to them (mostly related to the
-use of **terra** and **ggplot2** at this stage). You can ask for help or search
-previous questions in the following links.
+This document is a compendium of [frequently asked
+questions](https://github.com/dieghernan/tidyterra/discussions) about using the
+**tidyterra** package and their solutions (primarily focused on the integration
+of **terra** and **ggplot2**). You can ask for help or search previous questions
+using the following links.
 
 You can also ask in [Stack Overflow](https://stackoverflow.com/) using the tag
 [`tidyterra`](https://stackoverflow.com/questions/tagged/tidyterra).
 
--   Report a Bug [[link](https://github.com/dieghernan/tidyterra/issues)].
+-   Report a Bug \[[link](https://github.com/dieghernan/tidyterra/issues)\].
 -   Ask a question
-    [[link](https://github.com/dieghernan/tidyterra/discussions)].
+    \[[link](https://github.com/dieghernan/tidyterra/discussions)\].
 
 ### Example data
 
@@ -67,7 +63,15 @@ filled[^2].
     undesired results, see
     [#120](https://github.com/dieghernan/tidyterra/issues/120).
 
-```{r remove-nas}
+```{r}
+#| label: fig-remove_nas
+#| fig-cap: NA values on ggplot2
+#| fig-subcap:
+#|   - Default ggplot2 value.
+#|   - Plot with transparent NA values.
+#|   - NA values mapped with another color.
+#| layout-ncol: 1
+#| column: page
 library(terra)
 library(tidyterra)
 library(ggplot2)
@@ -111,7 +115,14 @@ def +
 Use `geom_spatraster_contour_text()`
 [![Experimental](https://dieghernan.github.io/tidyterra/reference/figures/lifecycle-experimental.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental):
 
-```{r text-contour}
+```{r}
+#| label: fig-textcontour
+#| layout-ncol: 1
+#| column: page
+#| fig-cap: Contour labels with tidyterra
+#| fig-subcap:
+#|   - Simple contour labels.
+#|   - "Alternative: Labelled contours."
 library(terra)
 library(tidyterra)
 library(ggplot2)
@@ -123,7 +134,6 @@ r <- rast(holyrood)
 ggplot() +
   geom_spatraster_contour_text(data = r) +
   labs(title = "Labelling contours")
-
 
 # With options and aes
 
@@ -178,7 +188,10 @@ Thanks to `fortify.SpatRaster()` you can use your `SpatRaster` straight away
 with the **metR** package (see [Hexagonal grids and other geoms](#fort)). Use
 the argument(s) `bins/binwidth/breaks` to align both labels and lines:
 
-```{r metr}
+```{r}
+#| label: fig-metr
+#| fig-cap: "Alternative (metR): Contour labeling combining tidyterra and metR
+#|   packages with customized styling."
 library(metR)
 br <- seq(100, 250, 10)
 labs <- c(100, 140, 180, 220)
@@ -236,7 +249,10 @@ ggplot(r, aes(x, y)) +
 Since **tidyterra** leverages on **ggplot2**, please refer to **ggplot2** use of
 scales:
 
-```{r greys}
+```{r}
+#| label: fig-greys
+#| fig-cap: Hillshade visualization using grayscale colors to enhance
+#|   terrain relief.
 library(terra)
 library(tidyterra)
 library(ggplot2)
@@ -265,7 +281,14 @@ ggplot() +
 Yes, use `options("ggplot2.continuous.fill")` to modify the default colors in
 your session.
 
-```{r default}
+```{r}
+#| label: fig-default
+#| layout-ncol: 1
+#| column: page
+#| fig-cap: Changing default ggplot2 color palettes
+#| fig-subcap:
+#|   - Use of new default palette via options.
+#|   - Restoring the default palette.
 library(terra)
 library(tidyterra)
 library(ggplot2)
@@ -287,21 +310,26 @@ p
 # restore previous setting
 options(ggplot2.continuous.fill = tmp)
 
-
 p
 ```
 
 ## My map tiles are blurry {#blurry-tiles}
 
-This is probably related to the tile itself rather than the package. Most base
-tiles are provided in **EPSG:3857**, so check first if your tile has this CRS
-and not a different one. Not having **EPSG:3857** may be an indication that the
-tile has been reprojected, implying some sort of sampling that causes the
-blurriness on your data. Also, modify the argument `maxcell` to avoid
-resampling and force the **ggplot2** map to be on **EPSG:3857** with
-`ggplot2::coord_sf(crs = 3857)`:
+Blurriness is typically related to the tile source rather than the package. Most
+base tiles are provided in **EPSG:3857**, so verify that your tile uses this CRS
+rather than a different one. If your tile is not in **EPSG:3857**, it has likely
+been reprojected, which involves resampling and causes blurriness. Also, modify
+the `maxcell` argument to avoid resampling and ensure the **ggplot2** map uses
+**EPSG:3857** with `ggplot2::coord_sf(crs = 3857)`:
 
-```{r blurry-tile, fig.show='hold', out.width="50%"}
+```{r}
+#| label: fig-blurrytile
+#| fig-cap: "Example of impact of resampling on blurriness of the tile"
+#| fig-subcap:
+#|   - "Plot with resampled raster (EPGS:4326)."
+#|   - "Plot with native CRS - not resampled (EPGS:3857)."
+#| layout-ncol: 2
+#| column: page
 library(terra)
 library(tidyterra)
 library(ggplot2)
@@ -323,7 +351,7 @@ tile1 <- get_tiles(
 
 ggplot() +
   geom_spatraster_rgb(data = tile1) +
-  labs(title = "This is a bit blurry...") +
+  labs(title = "CRS EPSG:4326") +
   theme_void()
 
 st_crs(tile1)$epsg
@@ -350,16 +378,23 @@ ggplot() +
   geom_spatraster_rgb(data = tile2, maxcell = Inf) +
   # Force crs to be 3857
   coord_sf(crs = 3857) +
-  labs(title = "...compared with this one") +
+  labs(title = "CRS EPSG:3857") +
   theme_void()
 ```
 
 ## Avoid degrees labeling on axis {#axis-degrees}
 
-Again, this is the **ggplot2** default, but can be modified with
+This is a **ggplot2** default behavior, but you can modify it using the
 `ggplot2::coord_sf(datum)` argument:
 
-```{r modify-datum}
+```{r}
+#| label: fig-modifydatum
+#| layout-ncol: 1
+#| column: page
+#| fig-cap: Degree labelling with ggplot2
+#| fig-subcap:
+#|   - "Automatic longitude/latitude axes."
+#|   - "Native coordinate system units."
 library(terra)
 library(tidyterra)
 library(ggplot2)
@@ -393,9 +428,17 @@ ggplot() +
 This is a long-standing issue in **ggplot2** with no satisfactory solution so
 far. Please see
 [ggplot2/issues/4622](https://github.com/tidyverse/ggplot2/issues/4622) (and
-maybe consider opening a new issue). You can try something like this:
+consider contributing if you have insights). You can try the following approach:
 
-```{r breaks}
+```{r}
+#| label: fig-breaks
+#| layout-ncol: 1
+#| column: page
+#| fig-cap: Spatial axis breaks with ggplot2
+#| fig-subcap:
+#|   - "Default axis breaks."
+#|   - "Custom-defined breaks."
+
 packageVersion("ggplot2")
 
 library(terra)
@@ -431,18 +474,18 @@ ggplot() +
 
 ## Plotting a `SpatRaster` with color tables
 
-**tidyterra** has several ways to handle these `SpatRaster` objects. We use the
-file `clc_edinburgh.tif`, available online in
-<https://github.com/dieghernan/tidyterra/tree/main/data-raw> folder,
-representing the information from the Corine Land Cover Dataset (2018) for the
-city of Edinburgh[^3].
+**tidyterra** provides several methods for handling `SpatRaster` objects with
+color tables. This example uses `clc_edinburgh.tif`, available online in the
+[data-raw folder](https://github.com/dieghernan/tidyterra/tree/main/data-raw),
+which contains data from the Corine Land Cover Dataset (2018) for Edinburgh[^3].
 
 [^3]: The original file has been cropped, the numeric values have been converted
     to their corresponding labels and factors, and it has been added the
     corresponding color table as of
     <https://collections.sentinel-hub.com/corine-land-cover/readme.html>.
 
-```{r coltab}
+```{r}
+#| label: coltab
 library(terra)
 library(tidyterra)
 library(ggplot2)
@@ -505,9 +548,12 @@ g +
 
 ## Use with gganimate {#gganimate}
 
-Sure! See an example (thanks [\@frzambra](https://github.com/frzambra)):
+Absolutely! Here is an example (thanks to
+[\@frzambra](https://github.com/frzambra)):
 
-```{r gganimate, eval=FALSE}
+```{r}
+#| label: gganimate
+#| eval: false
 library(gganimate)
 library(tidyterra)
 library(geodata)
@@ -542,17 +588,23 @@ anim <- ggplot() +
 gganimate::animate(anim, duration = 12, device = "ragg_png")
 ```
 
-```{r include_gif, echo=FALSE}
+```{r}
+#| label: fig-include_gif
+#| fig-cap: "Animation of average monthly temperatures."
+#| echo: false
 knitr::include_graphics("che_temp.gif")
 ```
 
 ## North arrows and scale bar
 
-**tidyterra** does not provide these graphical objects for **ggplot2** plots.
-However, you can use **ggspatial** functions
+**tidyterra** does not provide north arrows or scale bars directly for
+**ggplot2** plots. However, you can use **ggspatial** functions
 (`ggspatial::annotation_north_arrow()` and `ggspatial::annotation_scale()`):
 
-```{r northarrow}
+```{r}
+#| label: fig-northarrow
+#| fig-cap: "Map with north arrow (top right) and scale bar (bottom left)
+#|    annotations added using ggspatial."
 library(terra)
 library(tidyterra)
 library(ggplot2)
@@ -580,10 +632,13 @@ autoplot(r) +
 
 ## How to overlay a `SpatRaster` over a RGB tile
 
-This is quite straightforward, just use `geom_spatraster_rgb()` and after that,
-just create your layer:
+This is straightforward: use `geom_spatraster_rgb()` for the background tile,
+and then add your data layers on top:
 
-```{r overlay_cont}
+```{r}
+#| label: fig-overlay_cont
+#| fig-cap: "Continuous precipitation data overlaid as semi-transparent layer
+#|   on RGB satellite imagery."
 library(terra)
 library(tidyterra)
 library(ggplot2)
@@ -641,10 +696,17 @@ ggplot(aoi) +
   )
 ```
 
-We can create other variations with binned legends and filled contours (see
-`geom_spatraster_contour_filled()`):
+You can create variations with binned legends and filled contours using
+`geom_spatraster_contour_filled()`:
 
-```{r overlay_alt}
+```{r}
+#| label: fig-overlay_alt
+#| layout-ncol: 1
+#| column: page
+#| fig-cap: Alternative overlay approaches
+#| fig-subcap:
+#|   - "Binned precipitation legend."
+#|   - "Contour representation."
 # Binned
 ggplot(aoi) +
   geom_spatraster_rgb(data = rgb_tile, alpha = 1) +
@@ -685,14 +747,13 @@ ggplot(aoi) +
 
 ## Hexagonal grids (and other `geoms`) {#fort}
 
-Conceptually, the cells of a `SpatRaster` are rectangular, so it is not possible
-to create a `SpatRaster` with i.e. hexagonal cells.
+While `SpatRaster` cells are inherently rectangular, you can create plots with
+hexagonal cells using `fortify.SpatRaster()` and `stat_summary_hex()`. The final
+plot requires coordinate adjustment with `coord_sf()`:
 
-But it is possible to create a plot with hexagonal cells thanks to
-`fortify.SpatRaster()` and `stat_summary_hex()`. Additional work is needed to
-adjust the final plot, specifically, it is also needed to use `coord_sf()`:
-
-```{r hex_grid}
+```{r}
+#| label: fig-hex_grid
+#| fig-cap: "Elevation data aggregated and visualized as hexagonal grid cells."
 library(terra)
 library(tidyterra)
 library(ggplot2)
@@ -719,14 +780,16 @@ ggplot(r, aes(x, y, z = elevation)) +
   )
 ```
 
-Note that there is no need to make a direct call to `fortify.SpatRaster()`,
-since this function is implicitly invoked by **ggplot2** when using
-`ggplot(data = a_spatraster)`.
+Note that you do not need to call `fortify.SpatRaster()` directly; **ggplot2**
+invokes it implicitly when you use `ggplot(data = a_spatraster)`.
 
-Thanks to this extension mechanism, it is possible to use additional `geoms` and
-`stats` provided by **ggplot2**:
+Thanks to this extension mechanism, you can use additional `geoms` and `stats`
+from **ggplot2**:
 
-```{r alt_points}
+```{r}
+#| label: fig-alt_points
+#| fig-cap: "Elevation data represented as points with size and transparency
+#|   scaled by elevation values."
 # Point plot
 ggplot(r, aes(x, y, z = elevation), maxcell = 1000) +
   geom_point(
@@ -748,12 +811,15 @@ ggplot(r, aes(x, y, z = elevation), maxcell = 1000) +
 
 ### tidyterra and metR
 
-**metR** is a package that also provides **ggplot2** extensions, mainly focused
-on the analysis of meteorological fields. As shown previously (see [Labeling
-contours](#label-contour)) it is possible to use both packages to provide rich
-plots.
+**metR** is a package that provides **ggplot2** extensions, primarily for
+meteorological data visualization. As shown previously (see [Labeling
+contours](#label-contour)), you can combine both packages to create rich,
+complex plots.
 
-```{r metr_demo}
+```{r}
+#| label: fig-metrdemo
+#| fig-cap: "Relief rendering combining tidyterra for raster visualization and
+#|   metR for terrain relief representation."
 # load libraries and files
 library(terra)
 library(tidyterra)
@@ -763,9 +829,7 @@ library(metR)
 holyrood <- "holyroodpark.tif"
 
 r <- rast(holyrood)
-```
 
-```{r hill}
 ggplot(r, aes(x, y)) +
   geom_relief(aes(z = elevation)) +
   geom_spatraster(
@@ -778,18 +842,3 @@ ggplot(r, aes(x, y)) +
   guides(alpha = "none", fill = guide_legend(reverse = TRUE)) +
   labs(x = "", y = "", title = "tidyterra and metR: reliefs")
 ```
-
-## Session info
-
-<details>
-
-<summary>Details</summary>
-
-```{r session, echo=FALSE}
-if (!require("sessioninfo")) {
-  install.packages("sessioninfo")
-}
-sessioninfo::session_info()
-```
-
-</details>
