--- a/vignettes/paper.bib
+++ b/vignettes/paper.bib
@@ -19,7 +19,6 @@
 }
 @book{moraga2023,
 	title        = {Spatial {Statistics} for {Data} {Science}: {Theory} and {Practice} with {R}},
-	shorttitle   = {Spatial {Statistics} for {Data} {Science}},
 	author       = {Moraga, Paula},
 	year         = 2024,
 	publisher    = {CRC Press},
@@ -294,7 +293,7 @@
 	publisher    = {Cold Spring Harbor Laboratory},
 	doi          = {10.1101/2023.07.24.550358},
 	url          = {https://www.biorxiv.org/content/early/2023/07/26/2023.07.24.550358},
-	elocation-id = {2023.07.24.550358},
+	elocation-id = {2023.07.24.550358}
 }
 @article{meister2023,
 	title        = {
