--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -4,7 +4,6 @@
 		degradation, species distributions and species vulnerabilities in {East}
 		{African} grasslands.
 	},
-	shorttitle   = {Advancing ecosystem understanding},
 	author       = {Wiethase, Joris Hendrik},
 	year         = 2023,
 	month        = dec,
@@ -46,7 +45,6 @@
 		Active management is required to regenerate the {Caledonian} forest:
 		{Alladale} as a case study
 	},
-	shorttitle   = {Active management is required to regenerate the {Caledonian} forest},
 	author       = {Williams, Jake and Sandom, Christopher J. and Pettorelli, Nathalie},
 	year         = 2024,
 	month        = jan,
@@ -62,7 +60,6 @@
 }
 @article{elio_medina_how_2025,
 	title        = {How to {Approach} the {Definition} of {WUI} in {Northern} {Europe}},
-	shorttitle   = {How to {Approach} the {Definition} of {\textless}span style="font-variant},
 	author       = {
 		Elio Medina, Javier and Plathner, Frida Vermina and Pastor, Elsa and
 		Fernandez-Anez, Nieves
@@ -306,19 +303,6 @@
 	url          = {https://linkinghub.elsevier.com/retrieve/pii/S0960982225002763},
 	urldate      = {2025-04-12}
 }
-@article{Maitner2025.04.03.647025,
-	title        = {{Flexible Methods for Species Distribution Modeling with Small Samples}},
-	author       = {
-		Maitner, Brian S. and Richards, Robert L. and Carlson, Ben and Drake, John M.
-		and Merow, Cory
-	},
-	year         = 2025,
-	journal      = {bioRxiv},
-	publisher    = {Cold Spring Harbor Laboratory},
-	doi          = {10.1101/2025.04.03.647025},
-	url          = {https://www.biorxiv.org/content/early/2025/04/08/2025.04.03.647025},
-	elocation-id = {2025.04.03.647025}
-}
 @article{coffey_spatial_2025,
 	title        = {
 		The spatial distribution of a hummingbird-pollinated plant is not strongly
@@ -375,9 +359,9 @@
 		study in the {Northern Region of Ghana}
 	},
 	author       = {
-		Kassim, Yussif Baba  and Pinto, Francisco  and MacCarthy, Dilys S.  and
-		Bindraban, Prem  and Chirinda, Ngonidzashe  and Stomph, TjeerdJan  and
-		Struik, Paul C.
+		Kassim, Yussif Baba and Pinto, Francisco and MacCarthy, Dilys S.  and
+		Bindraban, Prem and Chirinda, Ngonidzashe and Stomph, TjeerdJan and Struik,
+		Paul C.
 	},
 	year         = 2025,
 	journal      = {Frontiers in Soil Science},
@@ -394,8 +378,8 @@
 		air-breathing krill predators using acoustic data from the fishery
 	},
 	author       = {
-		Dominik Bahlburg  and Sebastian Menze  and Bj\o{}rn A. Krafft  and Andy D.
-		Lowther  and Bettina Meyer
+		Dominik Bahlburg and Sebastian Menze and Bj\o{}rn A. Krafft and Andy D.
+		Lowther and Bettina Meyer
 	},
 	year         = 2025,
 	journal      = {Proceedings of the National Academy of Sciences},
@@ -422,10 +406,6 @@
 	title        = {
 		Vectors, host range, and spatial distribution of \textit{{Dirofilaria}
 		immitis} and \textit{{D.} {repens}} in {Europe}: a systematic review
-	},
-	shorttitle   = {
-		Vectors, host range, and spatial distribution of \textit{Dirofilaria immitis}
-		and \textit{D. repens} in {Europe}
 	},
 	author       = {Hattendorf, Carolin and L\"{u}hken, Renke},
 	year         = 2025,
@@ -536,7 +516,6 @@
 		metaphylogeography using a community-based {eDNA} metabarcoding monitoring
 		network
 	},
-	shorttitle   = {Biomonitoring 2.0 {Refined}},
 	author       = {
 		Riley, Andrew C. and Wright, Michael and Porter, Teresita M. and Maitland, V.
 		Carley and Baird, Donald J. and Hajibabaei, Mehrdad
@@ -573,19 +552,6 @@
 	url          = {https://pubs.acs.org/doi/10.1021/acs.est.5c05334},
 	urldate      = {2025-09-29},
 	copyright    = {https://creativecommons.org/licenses/by-nc-nd/4.0/}
-}
-@misc{read_assessing_2025,
-	title        = {
-		Assessing protected areas as climate refugia for threatened plant species in
-		{Britain}
-	},
-	author       = {Read, Freya R. and Warmington, Rachel J. and Beale, Colin M.},
-	year         = 2025,
-	month        = sep,
-	doi          = {10.1101/2025.09.02.673856},
-	url          = {http://biorxiv.org/lookup/doi/10.1101/2025.09.02.673856},
-	urldate      = {2025-09-29},
-	copyright    = {http://creativecommons.org/licenses/by/4.0/}
 }
 @article{fard_developing_2025,
 	title        = {
@@ -634,7 +600,6 @@
 		Mapping risks and landscapes: conservation insights for {Italian} small
 		ruminant populations
 	},
-	shorttitle   = {Mapping risks and landscapes},
 	author       = {Bionda, Arianna and Negro, Alessio and Grande, Silverio and Crepaldi, Paola},
 	year         = 2025,
 	month        = sep,
@@ -666,21 +631,17 @@
 	url          = {https://www.sciencedirect.com/science/article/pii/S0341816225007568}
 }
 @article{jones_saur_2025,
-	title        = {Saur and decline: {Patterns} in lizard imports to the {US} (2000–2022)},
-	shorttitle   = {Saur and decline},
+	title        = {Saur and decline: {Patterns} in lizard imports to the {US} (2000-2022)},
 	author       = {Jones, Max Dolton},
 	year         = 2025,
 	month        = oct,
-	journal      = {PLOS One},
+	journal      = {PLOS ONE},
+	publisher    = {Public Library of Science},
 	volume       = 20,
 	number       = 10,
-	pages        = {e0333746},
+	pages        = {1--25},
 	doi          = {10.1371/journal.pone.0333746},
-	issn         = {1932-6203},
-	url          = {https://dx.plos.org/10.1371/journal.pone.0333746},
-	urldate      = {2025-10-27},
-	language     = {en},
-	editor       = {Mizsei, Edvard}
+	url          = {https://doi.org/10.1371/journal.pone.0333746}
 }
 @article{doi:10.1073/pnas.2517585122,
 	title        = {
@@ -688,10 +649,10 @@
 		ecological dominance globally
 	},
 	author       = {
-		Gabriel M. Moulatlet  and Cory Merow  and Brian Maitner  and Brad Boyle  and
-		Xiao Feng  and Amy E. Frazier  and Cesar Hinojo-Hinojo  and Erica A. Newman
-		and Patrick R. Roehrdanz  and Lei Song  and Fabricio Villalobos  and Pablo A.
-		Marquet  and Jens-Christian Svenning  and Brian J. Enquist
+		Gabriel M. Moulatlet and Cory Merow and Brian Maitner and Brad Boyle and Xiao
+		Feng and Amy E. Frazier and Cesar Hinojo-Hinojo and Erica A. Newman and
+		Patrick R. Roehrdanz and Lei Song and Fabricio Villalobos and Pablo A.
+		Marquet and Jens-Christian Svenning and Brian J. Enquist
 	},
 	year         = 2025,
 	journal      = {Proceedings of the National Academy of Sciences},
@@ -788,6 +749,29 @@
 	doi          = {10.5194/we-25-221-2025},
 	url          = {https://we.copernicus.org/articles/25/221/2025/}
 }
+@article{https://doi.org/10.1111/mec.70179,
+	title        = {
+		Pliocene Forest Fragmentation Shaped Speciation in Tropical {Asia's} Giant
+		Squirrels ({\textit{Ratufa}})
+	},
+	author       = {
+		Hinckley, Arlo and Pinilla-Buitrago, Gonzalo E. and Maldonado, Jes\'{u}s E.
+		and Flores, Mary Faith C. and Esselstyn, Jacob A. and Inayah, Nurul and
+		Hawkins, Melissa T. R.
+	},
+	year         = 2025,
+	journal      = {Molecular Ecology},
+	volume       = 34,
+	number       = 24,
+	pages        = {e70179},
+	doi          = {10.1111/mec.70179},
+	url          = {https://onlinelibrary.wiley.com/doi/abs/10.1111/mec.70179},
+	note         = {e70179 MEC-25-0301.R2},
+	keywords     = {
+		genomics/proteomics, mammals, niche modelling, phylogeography, speciation,
+		systematics
+	}
+}
 @article{ZHOU2026100294,
 	title        = {
 		Vascular plant diversity and distribution pattern in {Tajikistan}: A global
@@ -836,4 +820,73 @@
 	pages        = {1--34},
 	doi          = {10.5194/egusphere-2025-6363},
 	url          = {https://egusphere.copernicus.org/preprints/2026/egusphere-2025-6363/}
+}
+@article{https://doi.org/10.1002/ecog.08112,
+	title        = {Flexible methods for species distribution modeling with small samples},
+	author       = {
+		Maitner, Brian S. and Richards, Robert L. and Carlson, Ben S. and Drake, John
+		M. and Merow, Cory
+	},
+	year         = 2026,
+	journal      = {Ecography},
+	pages        = {e08112},
+	doi          = {10.1002/ecog.08112},
+	url          = {https://nsojournals.onlinelibrary.wiley.com/doi/abs/10.1002/ecog.08112},
+	keywords     = {
+		species distribution models, niche models, MaxEnt, range-bagging, kernel
+		density estimation, presence-only data
+	}
+}
+@article{Copot2026,
+	title        = {
+		Assessment of multiple outcomes of habitat models can significantly affect
+		conservation decisions for threatened species
+	},
+	author       = {Copot, Ovidiu and L\~{o}hmus, Asko},
+	year         = 2026,
+	month        = jan,
+	day          = 20,
+	journal      = {Scientific Reports},
+	doi          = {10.1038/s41598-026-35987-4},
+	issn         = {2045-2322},
+	url          = {https://doi.org/10.1038/s41598-026-35987-4}
+}
+@article{10.1371/journal.pone.0332485,
+	title        = {
+		Assessing protected areas as climate refugia for threatened plant species in
+		{Britain}
+	},
+	author       = {Read, Freya R. and Warmington, Rachel J. and Beale, Colin M.},
+	year         = 2026,
+	month        = {01},
+	journal      = {PLOS ONE},
+	publisher    = {Public Library of Science},
+	volume       = 21,
+	number       = 1,
+	pages        = {1--16},
+	doi          = {10.1371/journal.pone.0332485},
+	url          = {https://doi.org/10.1371/journal.pone.0332485}
+}
+@article{https://doi.org/10.1002/ece3.72978,
+	title        = {
+		Growth Performance Is Driven by Site Conditions and Moderated by Functional
+		Trait Plasticity in {\textit{Quercus robur}} and {\textit{Prunus avium}}
+	},
+	author       = {
+		Di Fabio, Alessandro and Aspalter, Samuel and Chakraborty, Debojyoti and van
+		Loo, Marcela and Rolke, Lisa M. and Sch\"{u}ler, Silvio and Thiel, Robin and
+		Veit, Christiane and Kreyling, J\"{u}rgen
+	},
+	year         = 2026,
+	journal      = {Ecology and Evolution},
+	volume       = 16,
+	number       = 2,
+	pages        = {e72978},
+	doi          = {10.1002/ece3.72978},
+	url          = {https://onlinelibrary.wiley.com/doi/abs/10.1002/ece3.72978},
+	note         = {e72978 ECE-2025-05-01331.R2},
+	keywords     = {
+		functional traits, growth performance, phenotypic plasticity, provenance
+		trial, specific leaf area, spring phenology
+	}
 }
