--- a/vignettes/tidyterra.qmd
+++ b/vignettes/tidyterra.qmd
@@ -10,27 +10,34 @@ tags:
   - tidyverse
   - terra
   - ggplot2
-author: Diego Hernangómez
+author:
+  - name: Diego Hernangómez
+    orcid: 0000-0001-8457-4658
 date: "2023-07-18"
-description: >-
-  Paper published on The Journal of Open Source Software.
+description: Paper published on The Journal of Open Source Software.
 bibliography: paper.bib
+citation:
+  type: article-journal
+  container-title: Journal of Open Source Software
+  volume: 8
+  issue: 91
+  page: 5751
+  available-date: 2023
+  doi: 10.21105/joss.05751
+  url: https://doi.org/10.21105/joss.05751
+  title: "Using the tidyverse with terra objects: the tidyterra package"
 link-citations: true
-editor_options:
-  markdown:
-    wrap: 80
-output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Using the tidyverse with terra objects: the tidyterra package}
-  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEngine{quarto::html}
   %\VignetteEncoding{UTF-8}
 ---
 
-<!-- tidyterra.Rmd is generated from tidyterra.Rmd.orig. Please edit that file -->
+<!-- tidyterra.qmd is generated from tidyterra.qmd.orig. Please edit that file -->
 
 
 
-[![DOI](https://joss.theoj.org/papers/10.21105/joss.05751/status.svg)](https://doi.org/10.21105/joss.05751)
+[![](https://joss.theoj.org/papers/10.21105/joss.05751/status.svg){fig-alt="DOI"}](https://doi.org/10.21105/joss.05751)
 
 ## Summary
 
@@ -46,8 +53,7 @@ Furthermore, **tidyterra** extends the functionality of the **ggplot2** package
 `geom_spatraster()` and `geom_spatvector()`, as well as carefully chosen scales
 and color palettes specifically designed for map production.
 
-[^1]:
-    The term `geoms` refers to geometric objects, and `stats` refers to
+[^1]: The term `geoms` refers to geometric objects, and `stats` refers to
     statistical transformations, following the naming conventions of **ggplot2**
 
 **tidyterra** can manipulate the following classes of **terra** objects:
@@ -68,13 +74,13 @@ since.
 
 ## Statement of need
 
-The [**tidyverse**](https://tidyverse.org/) is a compilation of **R**
-packages that share an underlying design philosophy, grammar, and data
-structures. The packages within the tidyverse are widely used by **R** users for
-tidying, transforming, and visualizing data.
+The [**tidyverse**](https://tidyverse.org/) is a compilation of **R** packages
+that share an underlying design philosophy, grammar, and data structures. The
+packages within the tidyverse are widely used by **R** users for tidying,
+transforming, and visualizing data.
 
-The **tidyverse** is designed to work with tidy data (_"every column is a
-variable, every row is an observation, every cell is a single value"_),
+The **tidyverse** is designed to work with tidy data (*"every column is a
+variable, every row is an observation, every cell is a single value"*),
 represented in the form of data frames or **tibbles**. However, it is possible
 to extend the functionality of **tidyverse** packages to work with new **R**
 object classes by registering the corresponding S3 methods [@wickham_s32019].
@@ -161,7 +167,8 @@ library(tidyverse) # Load all the packages of tidyverse at once
 library(scales) # Additional library for labels
 
 # Temperatures in Castille and Leon (selected months)
-rastertemp <- terra::rast(system.file("extdata/cyl_temp.tif",
+rastertemp <- terra::rast(system.file(
+  "extdata/cyl_temp.tif",
   package = "tidyterra"
 ))
 
@@ -188,7 +195,7 @@ ggplot() +
 ```
 
 <div class="figure">
-<img src="./spatraster-example1-1.png" alt="Faceted map with multi-layer raster file." width="100%" />
+<img src="./fig-ex1-1.png" alt="Faceted map with multi-layer raster file." width="100%" />
 <p class="caption">Faceted map with multi-layer raster file.</p>
 </div>
 
@@ -205,9 +212,7 @@ incr_temp <- rastertemp |>
   select(Variation = var)
 
 # Overlay an SpatVector
-cyl_vect <- terra::vect(system.file("extdata/cyl.gpkg",
-  package = "tidyterra"
-))
+cyl_vect <- terra::vect(system.file("extdata/cyl.gpkg", package = "tidyterra"))
 
 # Contour map with overlay
 ggplot() +
@@ -223,7 +228,7 @@ ggplot() +
 ```
 
 <div class="figure">
-<img src="./spatraster-example2-1.png" alt="Contour map of temperature variation with a SpatVector overlay" width="100%" />
+<img src="./fig-ex2-1.png" alt="Contour map of temperature variation with a SpatVector overlay" width="100%" />
 <p class="caption">Contour map of temperature variation with a SpatVector overlay</p>
 </div>
 
@@ -232,12 +237,12 @@ ggplot() +
 The package includes extensive documentation available online at
 <https://dieghernan.github.io/tidyterra/> including:
 
-- Details on each function, including (if possible) the equivalent **terra**
-  function, in case users prefer to include those on their workflows.
-- Working examples on the use of the functions and creation of plots.
-- Additional articles and vignettes, as well as a complete demo of the
-  different color palettes included on the package (see
-  [Palettes](https://dieghernan.github.io/tidyterra/articles/palettes.html)).
+-   Details on each function, including (if possible) the equivalent **terra**
+    function, in case users prefer to include those on their workflows.
+-   Working examples on the use of the functions and creation of plots.
+-   Additional articles and vignettes, as well as a complete demo of the
+    different color palettes included on the package (see
+    [Palettes](https://dieghernan.github.io/tidyterra/articles/palettes.html)).
 
 ## Acknowledgements
 
