--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -890,3 +890,21 @@
 		trial, specific leaf area, spring phenology
 	}
 }
+@article{Macey2026,
+	title        = {
+		Miniaturized light-level geolocators provide novel insight into the migration
+		ecology of an endangered songbird
+	},
+	author       = {
+		Macey, John N. and Kunberger, Jane M. and Collins, Kellene and Rowin, Scott
+		and Mueller, James M. and Carrasco, Shannon M. and Col{\'o}n, Melanie R. and
+		Grigsby, Nathan and Raginski, Nancy M. and Gamble, Michael D. and Finn, Drew
+		S. and Lopez, Roel and Long, Ashley M.
+	},
+	year         = 2026,
+	month        = feb,
+	day          = {07},
+	journal      = {Movement Ecology},
+	doi          = {10.1186/s40462-026-00626-0},
+	issn         = {2051-3933}
+}
