--- a/index.qmd
+++ b/index.qmd
@@ -14,7 +14,7 @@ knitr:
     out.width: "100%"
 ---
 
-<!-- README.md is generated from README.qmd. Please edit that file -->
+<!-- index.md is generated from index.qmd. Please edit that file -->
 
 ```{r}
 #| include: false
@@ -155,8 +155,13 @@ Current methods and functions provided by **tidyterra** are:
 | `generics::glance()` | ✔️ | ✔️ |
 | `generics::required_pkgs()` | ✔️ | ✔️ |
 
-::: callout-note
-## A note on performance
+```{=html}
+<div class="callout callout-style-default callout-warning callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container"><i class="callout-icon"></i></div>
+<div class="callout-title-container flex-fill">A note on performance</div></div>
+<div class="callout-body-container callout-body">
+```
 
 **tidyterra** is conceived as a user-friendly wrapper of **terra** using the
 **tidyverse** methods and verbs. This approach therefore has a **cost in terms
@@ -172,7 +177,11 @@ you are good to go with **tidyterra**.
 
 When plotting rasters, resampling is performed automatically (as `terra::plot()`
 does, see the help page). You can adjust this with the `maxcell` argument.
-:::
+
+```{=html}
+</div>
+</div>
+```
 
 ## Installation
 
